Adiciona estrutura inicial e receitas de HTML

--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <h2>Escolha uma receita:</h2>
+
+<ul>
+    <li><a href="recipes/lasanha.html">Lasanha</a></li>
+    <li><a href="recipes/bolo-chocolate.html">Bolo de Chocolate</a></li>
+    <li><a href="recipes/panqueca.html">Panqueca</a></li>
+</ul>
 </body>
 </html>
