Adiciona estrutura inicial e receitas de HTML

--- a/recipes/lasanha.html
+++ b/recipes/lasanha.html
@@ -10,17 +10,17 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/3/32/Lasagna_with_mascarpone.jpg" alt="Uma deliciosa lasanha assada">
     <h2>Descrição</h2>
     <p>A lasanha é um prato italiano clássico, feito com camadas de massa, molho bolonhesa, molho branco e muito queijo. Perfeito para o almoço de domingo</p>
-<h2>Ingrediente</h2>
+    <h2>Ingredientes</h2>
 <ul>
     <li>Massa para lasanha</li>
-    <li>Molho bolonhesa</li><li>
+    <li>Molho bolonhesa</li>
     <li>Molho Bechamel (branco)</li>
     <li>Queijo mussarela</li>
     <li>Queijo parmesão ralado</li>
 </ul>
-</h2>Modo de preparo</h2>
+    <h2>Modo de preparo</h2>
 <ol>
-    <li>Cozinha a massa al dente, conforme a embalagem</li>
+    <li>Cozinhe a massa al dente, conforme a embalagem</li>
     <li>Em um refratário, faça uma camada de molho bolonhesa.</li>
     <li>Adicione uma camada de massa de lasanha.</li>
     <li>Cubra com molho branco e queijo mussarela</li>
